--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -679,7 +679,7 @@ a.mega-title:hover {
     left: 0;
     margin: 0;
     top: 100%;
-    width: 920px;
+    /* width: 920px; */
     border-top: 2px solid #ffbb00;
     z-index: -99;
     padding: 30px 20px;
